<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoDB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="StartScanning">Start Scanning</string>
    <string name="StartAP">Start Access Point</string>
    <string name="StartCallibrator">Start Callibrator</string>
    <string name="trackMe">Track Me</string>
    <string name="addDevice">Add Device</string>
    <string name="postScanResultToServer">Post Scan Result To Server</string>
    <string name="savePreference">Save Preference</string>
    <string name="enterURL">URL (Do not include / at the end)</string>
    <string name="port">Port</string>
    <string name="Preference">Settings</string>
    <string name="accessPointName">Access Point Name</string>
    <string name="lattitude">Lattitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="markAsDeviceLocation">Mark As Device Location</string>
    <string name="deviceLattitude">Device Lattitude:</string>
    <string name="deviceLongtitude">Device Longtitude:</string>
    <string name="distanceFromDevice">Distance From Device</string>
    <string name="bearing">Bearing</string>
    <string name="StartCalibrating">Start Calibrating</string>
    <string name="SelectBTDevice">Select Bluetooth Device</string>
    <string name="scanDevices">Scan Devices</string>
    <string name="StartNearbyCallibration">Start NEarby Callibration</string>
    <string name="StartDistanceCallibration">Start Distance Callibration</string>
    <string name="finalize">Finalize Callibration</string>

</resources>