<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lattitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/lattitudeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longtitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/longtitudeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearing"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/bearingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/distanceFromDeviceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceFromDevice"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/markAsDeviceLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/markAsDeviceLocation" />

    <Button
        android:id="@+id/startCallibratingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartCalibrating" />

    <TextView
        android:id="@+id/deviceLatttudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deviceLattitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/deviceLongitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deviceLongtitude"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>