<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/startAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartAP" />

    <Button
        android:id="@+id/callibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartCallibrator" />

    <Button
        android:id="@+id/viewCallibrationResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Callibration Results" />

    <Button
        android:id="@+id/trackMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackMe" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Preference" />

</LinearLayout>