<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterURL"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/nearByRssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/deviceLatttudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessPointName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/accessPointNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <CheckBox
        android:id="@+id/isTestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Mode" />

    <Button
        android:id="@+id/callibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savePreference" />

</LinearLayout>