<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/deviceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/macAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/rssiTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/addDeviceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addDevice" />

        <Button
            android:id="@+id/postScanResultsToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postScanResultToServer" />

    </LinearLayout>

    <Button
        android:id="@+id/startScanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartScanning" />

    <TableLayout
        
        android:id="@+id/bluetoothDevicesTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

    </TableLayout>

</LinearLayout>